--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "@sekker/sekker-react",
   "version": "1.0.0",
   "description": "React lib to manage and initialize Sekker surveys easily",
-  "main": "index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:types": "tsc -p tsconfig.build.json",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sekker-io/sekker-react.git"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -21,9 +27,18 @@
     "react": "17.x.x"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
     "@sekker/types": "^1.0.118",
     "@types/react": "^17.0.37",
     "react": "^17.0.2",
+    "rollup": "^2.61.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.31.1",
     "typescript": "^4.5.2"
-  }
+  },
+  "dependencies": {}
 }
